<resources>
    <string name="app_name">PlayersNeeded</string>
    <string name="welcome_message">Welcome to Players Needed!</string>
    <string name="application_logo">Application Logo</string>
    <string name="logInButton">Log In</string>
    <string name="signUpButton">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Log In -->
    <string name="username">Username or Email</string>
    <string name="password">Password</string>
    <string name="errorLogIn">Wrong Username or Password</string>
    <string name="successfulLogIn">Log In Successful</string>

    <!-- Sign Up -->
    <string name="usernameSignUp">Username</string>
    <string name="emailSignUp">Email</string>
    <string name="passwordSignUp">Password</string>
    <string name="firstNameSignUp">First Name</string>s
    <string name="lastNameSignUp">Last Name</string>
    <string name="errorSignUp">Sign Up Not Successful</string>
    <string name="successfulSignUp">Sign Up Successful</string>

    <!-- User Home Screen -->
    <string name="createRoomButton">Create Room</string>
    <string name="joinRoomButton">Join Room</string>
    <string name="yourRoomsButton">Your Rooms</string>

    <!-- Create Room Screen -->
    <string name="createRoomMessage">Create a Players Room</string>
    <string name="sport">Sport</string>
    <string name="sport_dropdown_arrow_description">Sport Dropdown Arrow</string>
    <string name="defaultDate">01/01/1970</string>
    <string name="defaultHour">12:00 PM</string>
    <string name="roomName">Room Name</string>
    <string name="roomSport">Sport</string>
    <string name="roomDate">Date</string>
    <string name="roomTime">Time</string>
    <string name="roomNumber">No. Players</string>
    <string name="roomLocation">Location</string>
    <string name="roomExtraDetails">Details</string>
    <string name="roomSkill">Skill Level</string>
    <string name="roomAddress">Address</string>
    <string-array name="sports">
        <item>Sport</item>
        <item>Football</item>
        <item>Tenis</item>
        <item>Jogging</item>
        <item>Gym</item>
        <item>Basketball</item>
    </string-array>
    <string-array name="skills">
        <item>Skill Level</item>
        <item>Novice</item>
        <item>Middle</item>
        <item>Advanced</item>
        <item>Expert</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>

    <!-- Location Dialog -->
    <string name="chooseLocationButton">Choose Location</string>

    <!-- User Home Screen -->
    <string name="userHomeScreenArrowBack">User Home Screen Back Arrow</string>
    <string name="userHomeScreenPerson">User icon</string>

    <!-- News View -->
    <string name="dummyNews">Default News Image</string>
    <string name="dummyNewsText">Some Dummy News Here</string>

    <!-- Your Rooms -->
    <string name="yourRoomsMessage">Your Rooms</string>

    <!-- Join Room -->
    <string name="joinRoomMessage">Join a Players Room</string>

    <!-- Room View -->
    <string name="dummySportImage">Dummy Sport Image</string>
    <string name="dummyRoomDescription">Dummy Room Description</string>
    <string name="filterDropdownArrowDescription">Filter Dropdown Arrow</string>

    <!-- Filter Room -->
    <string name="filterPreferences">Choose Preferences</string>
    <string name="filterImageDescription">Filter Image Description</string>
    <string name="filtersTextView">Filters</string>
    <string name="applyFilters">Apply Filters</string>

    <!-- Room Screen-->
    <string name="overviewRoomButton">Overview</string>
    <string name="playersRoomButton">Players</string>
    <string name="chatRoomButton">Chat</string>
    <string name="operationButton">Operation</string>
    <string name="errorCreateRoom">Unable to Create Room</string>
    <string name="joinButton">Join</string>
    <string name="exitButton">Exit</string>
    <string name="editButton">Edit</string>
    <string name="deleteButton">Delete</string>
    <string name="sendButton">Send</string>
    <string name="yourMessage">Your Message</string>

    <!-- Player View -->
    <string name="dummyPlayerImage">Dummy Player Image</string>
    <string name="dummyPlayerDescription">Dummy Player Description</string>

    <!-- Edit Room -->

    <!-- Player Details -->
    <string name="dummyPlayerUsername">Username</string>
    <string name="dummyPlayerFirstName">First Name</string>
    <string name="dummyPlayerLastName">Last Name</string>
    <string name="dummyPlayerEmail">Email</string>
    <string name="dummyPlayerExperience">Experience</string>
    <string name="dummyPlayerLevel">Level</string>
    <string name="editPlayerDetailsButton">Edit Details</string>
    <string name="logOutPlayerButton">Log Out</string>
    <string name="deleteAccountButton">Delete Account</string>
    <string name="changePasswordButton">Change Password</string>
    <string name="saveChangesButton">Save Changes</string>
    <string name="detailsPlayer">Enter New Details</string>
    <string name="changePassword">Change Password</string>
    <string name="oldPassword">Old Password</string>
    <string name="newPassword">New Password</string>
    <string name="confirmNewPassword">Confirm New Password</string>
    <string name="dummyDate">June 10</string>
    <string name="enterMessage">Enter Message</string>
    <string name="sendMessage">Send</string>
    <string name="messageTime">10:00</string>
    <string name="dummyMessage">This is a Message</string>
    <string name="userIcon">User Icon</string>
    <string name="dummyName">John Grady Cole</string>
</resources>