<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#141517">

    <TextView
        android:id="@+id/detailsPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/changePassword"
        android:textColor="#ffffff"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints="autofill_hints"
        android:background="@drawable/round_corner_view_non_recycler"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailsPlayer" />

    <EditText
        android:id="@+id/confirmNewPassword"
        android:layout_width="305dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:autofillHints="autofill_hints"
        android:background="@drawable/round_corner_view_non_recycler"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center_horizontal|center_vertical"
        android:hint="@string/confirmNewPassword"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/applyPasswordChangesButton"
        android:layout_width="197dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner_view_non_recycler"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/saveChangesButton"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmNewPassword">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>